# particle-physics-simulation

./: .gitignore  CMakeLists.txt  test.cc  xintil.cc
include/: ActionInitialization.hh  Constants.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RootManager.hh  RunAction.hh  SteppingAction.hh
include/actions/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
include/data/: CaloData.hh  LinkDef.h  SipmData.hh
include/detectors/: CaloHit.hh  CaloSD.hh  DetectorHit.hh  HitData.hh  SensitiveDetector.hh  SipmHit.hh  SipmSD.hh
include/detectors/hitdata/: CaloHitData.hh  HitData.hh  SipmHitData.hh
include/hitdata/: CaloHitData.hh  HitData.hh  SipmHitData.hh
include/rootdata/: CaloRootData.hh  LinkDef.h  RootData.hh  SipmRootData.hh
include/utils/: Constants.hh  RootManager.hh
macros/: init.mac  vis.mac
scripts/: generate_tchain.ipynb
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RootManager.cc  RunAction.cc  SteppingAction.cc
src/actions/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/data/: CaloData.cc  SipmData.cc
src/detectors/: CaloHit.cc  CaloSD.cc  DetectorHit.cc  SipmHit.cc  SipmSD.cc
src/detectors/hitdata/: CaloHitData.cc  SipmHitData.cc
src/hitdata/: CaloHitData.cc  SipmHitData.cc
src/rootdata/: CaloRootData.cc  SipmRootData.cc
src/utils/: RootManager.cc
